--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Django==4.2.7
 Markdown==3.5.1
 PyMySQL==1.1.0
 Pygments==2.17.2
+cryptography==41.0.7
 django-filter==23.5
 djangorestframework==3.14.0
